syntax = "proto3";

option go_package = "github.com/klevtcov/gRPC/tripple/client1/server";

service SquareAdder {
    rpc SquareAdd(SquareAddRequest) returns (SquareAddResponse);
}

message SquareAddRequest {
    int32 x = 1;
    int32 y = 2;
}

message SquareAddResponse {
    int32 result = 1;
}